# Helix

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Helix.sln  README.md  config.ini  launch.bat  launch_debug.bat  launch_release.bat  server_config.ini  vcpkg.json
GameServer/: GameServer.cpp  GameServer.h  GameServer.vcxproj  GameServer.vcxproj.filters  main.cpp
GameServer/x64/Debug/: GameServer.exe.recipe
HelixCore/: CLogger.cpp  CLogger.h  CNetwork.cpp  CNetwork.h  CServer.cpp  CServer.h  HelixCore.vcxproj  HelixCore.vcxproj.filters  IFileLoader.h  ILoadable.h  INIData.cpp  INIData.h  INIFileLoader.h  INetwork.h  Iocp.cpp  Iocp.h  Logger.h  Network.cpp  Network.h  Noncopable.cpp  Noncopable.h  Noncopyable.h  Server.h  ServerConfig.cpp  ServerConfig.h  ServerControlService.cpp  ServerControlService.h  SocketExtension.cpp  SocketExtension.h  Types.h  pch.h
protos/: server_control.proto
tools/: README.md  compile_proto.bat  grpc_client.py
